--- a/buisness-tour/index.html
+++ b/buisness-tour/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link href="https://fonts.cdnfonts.com/css/roboto-condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
